--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,12 @@ jobs:
       run: |
         pip install selenium webdriver-manager
 
-    - name: Install Chrome and Chromedriver
+    - name: Install Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
-        wget https://chromedriver.storage.googleapis.com/$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip
-        sudo mv chromedriver /usr/local/bin/chromedriver
-        sudo chmod +x /usr/local/bin/chromedriver
 
     - name: Run script
       run: python main.py
