--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: |
-        pip install selenium webdriver-manager
+      run: pip install -r requirements.txt
+
 
     - name: Install Chrome
       run: |
