--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run Selenium Script Every 4 Hours
 
 on:
   schedule:
-    - cron: '0 */4 * * *'   # Every 4 hours UTC
-  workflow_dispatch:       # Manual trigger
+    - cron: '0 */4 * * *'  # Every 4 hours UTC
+  workflow_dispatch:
 
 jobs:
   run:
@@ -20,14 +20,6 @@ jobs:
 
     - name: Install dependencies
       run: pip install -r requirements.txt
-
-
-    - name: Install Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y wget unzip
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
     - name: Run script
       run: python .github/workflows/main.py
