--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Run Selenium Script Every 4 Hours
+name: Run Selenium Script Every 20 minutes
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Every 4 hours UTC
+    - cron: '*/20 * * * *'  
   workflow_dispatch:
 
 jobs:
