--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,10 @@ jobs:
       env:
         GMAIL_USER: ${{ secrets.GMAIL_USER }}
         GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
+    - name: Commit updated data (if needed)
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add data.txt || true
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update tracked number"
+        git push
