--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         GMAIL_USER: ${{ secrets.GMAIL_USER }}
         GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
-        
+
     - name: Commit updated data.txt
       env:
         GH_TOKEN: ${{ secrets.GH_PAT }}
@@ -36,4 +36,4 @@ jobs:
         git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
         git add data.txt || true
         git diff --quiet && git diff --staged --quiet || git commit -m "Update tracked number"
-        git push
+        git push origin main
