--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Run Selenium Script Every 20 minutes
 
+# on:
+#   schedule:
+#     - cron: '*/20 * * * *'
 on:
-  schedule:
-    - cron: '*/20 * * * *'
   workflow_dispatch:
 
 jobs:
